Issue 71. Scrollbar added.
git-svn-id: https://wavedrom.googlecode.com/svn/trunk@194 a767234a-31a9-74d1-c766-0ce7ea12625b

--- a/css/main.css
+++ b/css/main.css
@@ -70,6 +70,8 @@ act {
     overflow: hidden;
 }
 
-WaveDrom_Display_0 SVG {
-    overflow: hidden;
+#WaveDrom_Display_0 {
+	width:100%;
+	height:100%;
+	overflow: auto;
 }
